# predict_useful_count

./: .gitignore  pyproject.toml
predict_useful_count/: logistic_regression_analysis.py  simple_regression_analysis.py
predict_useful_count/dic/: EVALDIC_ver1.01
predict_useful_count/regression_analysis/: logistic_regression_analysis.py  simple_regression_analysis.py
predict_useful_count/text_classification/: doc2vec_rf.py  hashing_vec_multi_naive_bayes.py  huggingface_bert.py
predict_useful_count/utils/: dataset.py  folder_file.py  tokens.py
