[tool.poetry]
name = "predict-useful-count"
version = "0.1.0"
description = ""
authors = ["yuu <yusei8171@gmail.com>"]
readme = "README.md"
packages = [{include = "predict_useful_count"}]

[tool.poetry.dependencies]
python = ">=3.9.5,<3.13"
pandas = "^2.1.1"
scikit-learn = "^1.3.1"
matplotlib = "^3.8.0"
japanize-matplotlib = "^1.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
