[tool.poetry]
name = "predict-useful-count"
version = "0.1.0"
description = ""
authors = ["yuu <yusei8171@gmail.com>"]
readme = "README.md"
packages = [{include = "predict_useful_count"}]

[tool.poetry.dependencies]
python = ">=3.9.5,<3.13"
pandas = "^2.1.1"
scikit-learn = "^1.3.1"
matplotlib = "^3.8.0"
japanize-matplotlib = "^1.1.3"
transformers = "^4.34.1"
torch = "^2.1.0"
datasets = "^2.14.5"
fugashi = "^1.3.0"
ipadic = "^1.0.0"
sentencepiece = "^0.1.99"
accelerate = "^0.23.0"
imblearn = "^0.0"
unidic-lite = "^1.0.8"
gensim = "^4.3.2"
mecab-python3 = "^1.0.8"
cabocha-python = "^0.69.3"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
